# cruiz

./: .flake8  .gitignore  .pylintrc  .readthedocs.yaml  MANIFEST.in  NOTICE  README.md  mkdocs.yml  mypy.ini  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py  tox.ini
.github/workflows/: dev.yml  main.yml  pr.yml  prod.yml  tag.yml
cruiz/: __main__.py  __main_pyside2__.py  application.py  constants.py  dumpobjecttypes.py  entrypoint.py  exceptions.py  globals.py  mainwindow.py  resourcegeneration.py  revealonfilesystem.py  svggraph.py  version.py
cruiz/commands/: conanconf.py  conanenv.py  conaninvocation.py  context.py  messagereplyprocessor.py  metarequestconaninvocation.py
cruiz/interop/: commandparameters.py  commonparameters.py  packagebinaryparameters.py  packageidparameters.py  packagenode.py  packagerevisionsparameters.py  pod.py  reciperevisionsparameters.py  searchrecipesparameters.py
cruiz/load_recipe/: __init__.py  loadrecipewizard.py
cruiz/load_recipe/pages/: intropage.py  localcachepage.py  packageversionpage.py
cruiz/manage_local_cache/: managelocalcachesdialog.py
cruiz/manage_local_cache/widgets/: __init__.py  addenvironmentdialog.py  addextraprofiledirectorydialog.py  addremotedialog.py  configpathorurl.py  installconfigdialog.py  movelocalcachedialog.py  newlocalcachewizard.py  newlocalcachewizardpages.py  remotestable.py  removeenvironmentdialog.py  runconancommanddialog.py
cruiz/model/: graphaslistmodel.py
cruiz/pyside2/: __init__.py
cruiz/pyside6/: __init__.py
cruiz/recipe/: __init__.py  dependencyview.py  expressioneditordialog.py  findtextdialog.py  recipe.py  recipewidget.py
cruiz/recipe/logs/: command.py
cruiz/recipe/toolbars/: behaviour.py  buildfeatures.py  command.py
cruiz/remote_browser/: remotebrowser.py
cruiz/remote_browser/pages/: packagebinarypage.py  packageidpage.py  packagereferencepage.py  packagerevisionpage.py  page.py  reciperevisionpage.py
cruiz/resources/: about_dialog.ui  cruizres.qrc  find_text_dialog.ui  load_recipe_wizard.ui  local_cache_add_profile_directory.ui  local_cache_manage.ui  local_cache_move.ui  local_cache_new_wizard.ui  local_cache_run_command_dialog.ui  preferences.ui  recipe_compiler_cache_configuration_dialog.ui  recipe_cpucores_frame.ui  recipe_window.ui  remote_browser_fileview.ui
cruiz/settings/: preferencesdialog.py  updatesettings.py
cruiz/settings/managers/: basesettings.py  cleansettings.py  cmakepreferences.py  compilercachepreferences.py  conanpreferences.py  generalpreferences.py  graphvizpreferences.py  localcachepreferences.py  recentconanremotes.py  recentrecipes.py  recipe.py  shortcuts.py  writermixin.py
cruiz/settings/models/: recentconanremotesmodel.py  recipesmodel.py
cruiz/widgets/: aboutcruizdialog.py  debugging.py  shortcutlineedit.py  util.py
cruiz/workers/: __init__.py  arbitrary.py  cmakebuildtool.py  configinstall.py  deletecmakecache.py  exportpackage.py  install.py  lockcreate.py  meta.py  package.py  packagebinary.py  packagedetails.py  reciperevisions.py  remotesearch.py  removelocks.py  removepackage.py  source.py  testpackage.py
cruiz/workers/api/: __init__.py
cruiz/workers/utils/: __init__.py  conanapi.py  formatoptions.py  message.py  monkeypatch.py  qtlogger.py  stream.py  text2html.py  worker.py
doc/: developer.md  faq.md  index.md
doc/adr/: 0001-Separate-non-GUI-functionality-into-library.md  0002-lockfile-centric.md
scripts/: format_release_issues.py
src/cruiz/: __init__.py  __main__.py  application.py  config.py  dumpobjecttypes.py  entrypoint.py  environ.py  globals.py  mainwindow.py  resourcegeneration.py  restart.py  revealonfilesystem.py  runcommands.py  svggraph.py  version.py
src/cruiz/commands/: __init__.py  conanconf.py  conanenv.py  conaninvocation.py  context.py  guardedlisttoflush.py  logdetails.py  messagereplyprocessor.py  metarequestconaninvocation.py
src/cruiz/interop/: __init__.py  commandparameters.py  commonparameters.py  dependencygraph.py  message.py  packagebinaryparameters.py  packageidparameters.py  packagenode.py  packagerevisionsparameters.py  pod.py  reciperevisionsparameters.py  searchrecipesparameters.py
src/cruiz/load_recipe/: __init__.py  loadrecipewizard.py
src/cruiz/manage_local_cache/: __init__.py  managelocalcachesdialog.py
src/cruiz/model/: __init__.py  conanpackagetypeflags.py  graphaslistmodel.py
src/cruiz/recipe/: __init__.py  dependencyview.py  expressioneditordialog.py  findtextdialog.py  recipe.py  recipewidget.py
src/cruiz/remote_browser/: __init__.py  remotebrowser.py
src/cruiz/resources/: about_dialog.ui  find_text_dialog.ui  load_recipe_wizard.ui  local_cache_add_environment.ui  local_cache_add_profile_directory.ui  local_cache_add_remote.ui  local_cache_install_config.ui  local_cache_manage.ui  local_cache_move.ui  local_cache_new_wizard.ui  local_cache_remove_environment.ui  local_cache_run_command_dialog.ui  preferences.ui  recipe_cmake_features_frame.ui  recipe_compiler_cache_configuration_dialog.ui  recipe_compilercache_features_frame.ui  recipe_profile_frame.ui  (+4 more)
src/cruizlib/: __init__.py  config.py  constants.py  dumpobjecttypes.py  environ.py  exceptions.py  globals.py  messagereplyprocessor.py  multiprocessingmessagequeuetype.py  runcommands.py  workertype.py
tests/: test_imports.py  tthread.py  ttypes.py
tests/interop/: test_commandparameters.py  test_dependencygraph.py  test_imports.py  test_message.py  test_packagenode.py  test_pod.py  test_runcommands.py
tests/workers/: conftest.py  test_cmake_build_tool.py  test_conan_autotools_helper.py  test_conan_build.py  test_conan_cmake_helper.py  test_conan_command_single_process.py  test_conan_commands.py  test_conan_config_install.py  test_conan_create.py  test_conan_install.py  test_conan_package.py  test_conan_remote_recipe_revisions.py  test_conan_remote_search.py  test_conan_remove_locks.py  test_dumpobjecttypes.py  test_end_message.py  test_env.py  test_globals.py  test_message_reply_processor.py  test_meta.py  test_meta_cruiz.py  testexceptions.py
testutilities/: testexceptions.py
(+263 files in other folders)
